--- a/public/home.html
+++ b/public/home.html
@@ -11,7 +11,7 @@
 
 <div class="ui container">
   <header class="ui header">
-    <h1 class="ui heading neon">Биржа <span class="flicker">Неткоин</span>ов</h1>
+    <h1 class="ui heading neon">Биржа <span class="flicker">Биткоин</span>ов</h1>
     <button class="ui button invert logout">Выйти</button>
   </header>
   <div class="ui grid">
@@ -69,7 +69,7 @@
               <select name="currency" class="ui selection compact dropdown">
                 <option value="">Валюта</option>
                 <option value="RUB">RUB</option>
-                <option value="NTC">NTC</option>
+                <option value="NTC">BTC</option>
                 <option value="EUR">EUR</option>
                 <option value="USD">USD</option>
               </select>
@@ -87,14 +87,14 @@
               <select class="ui selection compact dropdown">
                 <option value="">Из</option>
                 <option value="RUB">RUB</option>
-                <option value="NTC">NTC</option>
+                <option value="NTC">BTC</option>
                 <option value="EUR">EUR</option>
                 <option value="USD">USD</option>
               </select>
               <select class="ui selection compact dropdown">
                 <option value="">В</option>
                 <option value="RUB">RUB</option>
-                <option value="NTC">NTC</option>
+                <option value="NTC">BTC</option>
                 <option value="EUR">EUR</option>
                 <option value="USD">USD</option>
               </select>
@@ -123,7 +123,7 @@
               <select class="ui selection compact dropdown">
                 <option value="">Валюта</option>
                 <option value="RUB">RUB</option>
-                <option value="NTC">NTC</option>
+                <option value="NTC">BTC</option>
                 <option value="EUR">EUR</option>
                 <option value="USD">USD</option>
               </select>
